<resources>

    <string name="app_name">SIA</string>

    <!-- Action bar menu item strings -->
    <string name="action_refresh">Refresh</string>
    <string name="action_discard">Discard</string>
    <string name="action_news_feed">News Feed</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_exit">Exit</string>

    <!-- Accessibility descriptions -->
    <string name="drawer_open">Open the stock list drawer</string>
    <string name="drawer_close">Close the stock list drawer</string>

    <!-- News feed strings -->
    <string name="news_feed_ab_title">News Feed</string>

    <!-- Stock details fragment strings -->
    <string name="stock_chart_control_1d">1d</string>
    <string name="stock_chart_control_5d">5d</string>
    <string name="stock_chart_control_1m">1m</string>
    <string name="stock_chart_control_6m">6m</string>
    <string name="stock_chart_control_1y">1y</string>
    <string name="stock_name_title">Name:</string>
    <string name="stock_symbol_title">Symbol:</string>
    <string name="stock_price_title">Price:</string>
    <string name="stock_change_title">Change:</string>
    <string name="stock_prev_close_title">Prev Close:</string>
    <string name="stock_open_title">Open:</string>
    <string name="stock_market_cap_title">Market Cap:</string>
    <string name="stock_volume_title">Volume:</string>
    <string name="placeholder">Placeholder</string>

    <!-- Settings strings -->
    <string name="settings_ab_title">Settings</string>
    <string name="settings_back_button">Back</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="settings_category_main">Main Prefs</string>
    <string name="settings_refresh_rate">Auto Refresh:</string>
    <string name="settings_refresh_default">15</string>
    <string name="settings_refresh_radio_1">5 Seconds</string>
    <string name="settings_refresh_radio_2">15 Seconds</string>
    <string name="settings_refresh_radio_3">30 Seconds</string>
    <string name="settings_refresh_radio_4">45 Seconds</string>
    <string name="settings_refresh_radio_5">60 Seconds</string>
    <string name="settings_refresh_radio_6">Manual</string>

    <!-- Help strings -->
    <string name="help_ab_title">Help</string>
    <string name="help_intro">Welcome to the Stock Information Application.</string>
    <string name="help_stock_list_drawer_title">The Stock List Drawer</string>
    <string name="help_stock_list_drawer_open">
        <![CDATA[
            To get started, <b>open</b> the stock list drawer by swiping from the left
            edge of the screen or pressing:
        ]]>
    </string>
    <string name="help_stock_list_drawer_add">
        <![CDATA[
            You can <b>add</b> a stock to the stock list by using the floating action button:
        ]]>
    </string>
    <string name="help_stock_list_drawer_remove">
        <![CDATA[
            To <b>remove</b> a stock from the list, long press on the stock to select it (you can
            select multiple stocks at once) and then press:
        ]]>
    </string>
    <string name="help_stock_list_drawer_close">
        <![CDATA[
            You can <b>close</b> the stock list drawer by swiping from right, tapping outside
            of the stock list, pressing the back button, or pressing:
        ]]>
    </string>
    <string name="help_stock_detail_page_title">The Stock Detail Page</string>
    <string name="help_stock_detail_page_open">
        <![CDATA[
            To <b>open</b> a stock\'s detail page, click on the stock from inside the stock list
            drawer:
        ]]>
    </string>

    <!-- Add stock dialog strings -->
    <string name="add_stock_dialog_title">Add Stock</string>
    <string name="stock_name_input_title">Stock:</string>
    <string name="stock_color_input_title">Color:</string>
    <string name="add_stock_button">Add</string>
    <string name="cancel_button">Cancel</string>

    <!-- Color item test strings -->
    <string name="color_name">Color Name</string>

    <!-- Stock list item test strings -->
    <string name="stock_symbol">SYMB</string>
    <string name="stock_price">XXX.XX</string>
    <string name="stock_change">+X.XX</string>

    <!-- News list item test strings -->
    <string name="news_title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</string>
    <string name="news_desc">Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
                             penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                             Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
    </string>
    <string name="news_pub_date">Sun, 12 Apr 2015 18:04:09 GMT</string>

    <!-- Refresh service strings -->
    <string name="notification_title">Stock Information Application</string>
    <string name="notification_content">Touch to check stocks</string>

</resources>
