<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/stock_name_input_title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="@string/settings_refresh_rate"/>

        <RadioGroup
            android:id="@+id/settings_refresh_radio_group"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:paddingLeft="15dp">

            <RadioButton
                android:id="@+id/settings_refresh_radio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:text="@string/settings_refresh_radio_1"/>

            <RadioButton
                android:id="@+id/settings_refresh_radio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:text="@string/settings_refresh_radio_2"/>

            <RadioButton
                android:id="@+id/settings_refresh_radio_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:text="@string/settings_refresh_radio_3"/>

            <RadioButton
                android:id="@+id/settings_refresh_radio_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:text="@string/settings_refresh_radio_4"/>

            <RadioButton
                android:id="@+id/settings_refresh_radio_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:text="@string/settings_refresh_radio_5"/>

            <RadioButton
                android:id="@+id/settings_refresh_radio_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:text="@string/settings_refresh_radio_6"/>

        </RadioGroup>

    </LinearLayout>

</ScrollView>
